<resources>
    <string name="app_name">Api Application</string>
    <string name="name_tag">用户名：</string>
    <string name="password_tag">密  码：</string>
    <string name="tel_tag">电  话：</string>
    <string name="photo_tag">用户风采：</string>
    <string name="login_btn">登陆</string>

    <string name="login_fail">用户名或密码错误！</string>

    <string name="btn_user_info">用户详情</string>
    <string name="btn_add_user">新增用户</string>
</resources>
